Fixed Resizing Issue on Tasklist
Task list information would wrap around to next line

Text no longer wraps
text cutoff will now end in ...

--- a/source/prototype/tasklist/newstyle.css
+++ b/source/prototype/tasklist/newstyle.css
@@ -35,6 +35,9 @@ body {
   font-size: inherit;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-bottom: 1px solid black;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .task-entry > input[type="text"]:hover {
     background-color: lightgray;
